# macbook-giveaway-arbitrage

./: .env.example  .gitignore  README.md  config.py  main.py  package-lock.json  package.json  pyproject.toml
api/: routes.py
db/: database.py  models.py
docs/: db_schema.md
handlers/: admin.py  casino.py  check.py  info.py  language.py  profile.py  promocode.py  referral.py  start.py  winners.py
keyboards/: casino.py  channels.py  main_menu.py
locales/: ru.json  uk.json
middlewares/: contest_active.py  localization.py
plagins/cherry-charm/: README.md  index.html  manifest.webmanifest  package.json  plugin.manifest.json  pnpm-lock.yaml  vite.config.ts
plagins/cherry-charm/src/: App.tsx  Button.tsx  Game.tsx  Reel.tsx  SlotMachine.tsx  i18n.ts
plagins/cherry-charm/src/interface/: Interface.tsx
plagins/cherry-charm/src/interface/disclaimer/: DisclaimerModal.tsx  style.css
plagins/cherry-charm/src/interface/helpModal/: HelpModal.tsx
plagins/cherry-charm/src/stores/: store.ts
plagins/cherry-charm/src/utils/: reelMaps.ts  telegramAuth.ts
plagins/cherry-charm/src/utils/functions/: fruitToSegment.ts  segmentToFruit.ts
scripts/: add_channels.py  add_promocodes.py  diagnose_draw.py  init_userbot_session.py  update_webapp_url.py
tests/: test_e2e_flow.py  test_stage1.py  test_stage11.py  test_stage2.py  test_stage3.py  test_stage4.py  test_stages_5_10.py
utils/: admin_access.py  checks.py  draw.py  notifications.py  plugins.py  timezone.py  userbot_trust.py  webapp_launch.py
