[project]
name = "bot-neo"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=25.1.0",
    "aiogram>=3.27.0",
    "aiohttp>=3.13.5",
    "aiosqlite>=0.22.1",
    "asyncio>=4.0.0",
    "python-dotenv>=1.2.2",
    "tzdata>=2026.1",
]
